# HyperLPR_OLD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md
Hyperlpr/: composer.h  hyperlpr.h
Hyperlpr/enhancement/retinex/: retinex.h
Hyperlpr/io/: linux_dir.h
Hyperlpr/judger/: judger.h
Hyperlpr/locator/: locator.h  searcher.h
Hyperlpr/plate/: plate.h
Hyperlpr/recognizer/: charRecognizer.h  recongizer.h
Hyperlpr/recognizer/chinese/: CN_PLATE.h  cnn_recognizer.h  tesseract_recognizer.h
Hyperlpr/recognizer/segment/: chars_segment.cpp  chars_segment.h  core_func.cpp
Hyperlpr/tiny_cnn/: tiny_cnn.h
Hyperlpr/util/: config.h  operate.h
docs/: Confusable chars.md
examples/: evaluate.h  main.cpp  test_locate.h
model/: LeNet-weights 52.67% 3 2 2 2  cnn_platejudge.model  cnn_recongize.model
python/: GenChars.py
